<resources>
    <string name="app_name">Banque Misrt Task</string>
    <string name="trending">Trending</string>
    <string name="menu_image_description">menu image description</string>
    <string name="author">author</string>
    <string name="name">name</string>
    <string name="avatar_image_description">avatar image description</string>
    <string name="description">description</string>
    <string name="language">C++</string>
    <string name="_14_236">14,236</string>
    <string name="star_image_description">star image description</string>
    <string name="fork_image_description">fork image description</string>
    <string name="_4_376">4,376</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
    <string name="no_internet_connection_image_description">no internet connection image description</string>
    <string name="retry">Retry</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
</resources>