<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mediumWhite"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/avatar_image_description"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/author"
            android:textColor="@color/item_text_color"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/name"
            android:textColor="@color/item_text_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/expandable_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ping_fang_sc_regular"
            android:text="@string/description"
            android:textColor="@color/mediumGray"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_bullet"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/ping_fang_sc_regular"
            android:text="@string/language"
            android:textColor="@color/mediumGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_bullet"
            app:layout_constraintStart_toEndOf="@+id/cv_bullet"
            app:layout_constraintTop_toTopOf="@+id/cv_bullet" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/star_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_language"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:srcCompat="@drawable/ic_star_yellow_16"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/_14_236"
            android:textColor="@color/mediumGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_star"
            app:layout_constraintStart_toEndOf="@+id/iv_star"
            app:layout_constraintTop_toTopOf="@+id/iv_star" />

        <ImageView
            android:id="@+id/iv_fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/fork_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_stars"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            app:srcCompat="@drawable/ic_fork_black_16" />

        <TextView
            android:id="@+id/tv_fork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/_4_376"
            android:textColor="@color/mediumGray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_fork"
            app:layout_constraintStart_toEndOf="@+id/iv_fork"
            app:layout_constraintTop_toTopOf="@+id/iv_fork" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>